tests/miniJava/neg/006689_mutation.MiniJava
class java { public static void 0 Main ( String [ ] java ) { { } } }
